--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Prociono&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Zilla+Slab:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-@import url();
+@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 /* browser defaults */
 * {
@@ -166,7 +166,7 @@ font-family: 'Times New Roman', Times, serif;
   margin-top: 50px;
   text-align: center;
   font-size: 25px;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: "Archivo Black", sans-serif;
 }
 
 /* activity container icon */
@@ -198,4 +198,57 @@ font-family: 'Times New Roman', Times, serif;
 .activities .ctn-button:hover{
     background: #ce2a2a;
     color: #000000;
+}
+
+.recommendations {
+    display: flex;
+    background-image: url('../assets/images/pexels-joshuaworoniecki-2480667.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    justify-content: space-around;
+    
+}
+
+.recommendations .section-header{
+    font-size: 45px;
+    color: var(--header-primary);
+    margin-top: 170px;
+    font-family: "Merriweather", serif;
+}
+
+.recommendations .content {
+    color: var(--font-primary);
+    margin-bottom: 30px;
+    margin-top: 30px;
+}
+
+.recommendations .content h3{
+    font-family: "Archivo Black", sans-serif;
+    font-size: 18px;
+
+}
+
+.recommendations .content a{
+    color:var(--font-primary);
+    text-decoration: none;
+    margin-top: 5px;
+    transition: color 0.3s ease-out;
+}
+
+.recommendations .content a:hover{
+    color:#2e83bc;
+}
+
+.stats {
+    background-image: url('../assets/images/pexels-gsn-travel-28891278.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    
+}
+
+.stats-wrapper{
+    margin-top: 50px;
 }
