--- a/css/style.css
+++ b/css/style.css
@@ -200,6 +200,7 @@ font-family: 'Times New Roman', Times, serif;
     color: #000000;
 }
 
+/* recommendations section */
 .recommendations {
     display: flex;
     background-image: url('../assets/images/pexels-joshuaworoniecki-2480667.jpg');
@@ -209,6 +210,7 @@ font-family: 'Times New Roman', Times, serif;
     
 }
 
+/* recommendations section header */
 .recommendations .section-header{
     font-size: 45px;
     color: var(--header-primary);
@@ -216,18 +218,20 @@ font-family: 'Times New Roman', Times, serif;
     font-family: "Merriweather", serif;
 }
 
+/* main content of recommendations section */
 .recommendations .content {
     color: var(--font-primary);
     margin-bottom: 30px;
     margin-top: 30px;
 }
 
+/* subheading for main content */
 .recommendations .content h3{
     font-family: "Archivo Black", sans-serif;
     font-size: 18px;
-
 }
 
+/* link within paragraph */
 .recommendations .content a{
     color:var(--font-primary);
     text-decoration: none;
@@ -235,20 +239,101 @@ font-family: 'Times New Roman', Times, serif;
     transition: color 0.3s ease-out;
 }
 
+/* event where user hovers over link within paragraph and changes color */
 .recommendations .content a:hover{
     color:#2e83bc;
 }
 
+/* stats section */
 .stats {
-    background-image: url('../assets/images/pexels-gsn-travel-28891278.jpg');
+    background-image: url('../assets/images/pexels-alfomedeiros-11573878.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    align-content: center;
     
 }
 
+/* stats wrapper */
 .stats-wrapper{
-    margin-top: 50px;
+    margin-top: 100px;
+    background: black;
+    color: var(--font-primary);
+    margin-bottom: 100px;
+    text-align: center;
+    height: 100px;
+    width: 110px;
+    border-radius: 70px;
+    
+}
+
+/* wrapper header */
+.stats-wrapper h3{
+    font-size: 17px;
+    margin-bottom: 0;
+    font-family: "Archivo Black", sans-serif;
+}
+
+/* wrapper subtext */
+.stats-wrapper p{
+    font-size: 12px; 
+}
+
+/* author review section */
+.author{
+    background-image: url('../assets/images/pexels-gsn-travel-28891278.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
+
+/* author image */
+.author img{
+    height: 150px;
+    width: 150px;
+    margin-top: 30px;
+    border-radius: 100px;
+    margin-bottom: 10px;
+}
+
+/* author review paragraph */
+.author p{
+    color: var(--font-primary);
+}
+
+/* author name */
+.author h3{
+    margin-top: 0;
+    color: var(--font-primary);
+    font-family: "Merriweather", serif;
+    margin-bottom: 0;
+}
+
+/* chevron-down icon for author section */
+.author .hero-icon{
+    font-size: 60px;
+    color: var(--header-primary);
+    transition: color 0.6s ease;
+}
+
+/* event where user hovers over icon with cursor */
+.author .hero-icon:hover{
+    color:var(--font-primary);
+}
+
+/* gallery section */
+.gallery{
+    display: flex;
+    flex-direction: row;
+    padding: 0, 50px;
+}
+
+/* gallery images */
+.gallery img{
+    width: 400px;
+    height: 400px;
 }
