--- a/css/style.css
+++ b/css/style.css
@@ -251,9 +251,6 @@ font-family: 'Times New Roman', Times, serif;
     background-repeat: no-repeat;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
-    align-content: center;
-    
 }
 
 /* stats wrapper */
@@ -266,7 +263,7 @@ font-family: 'Times New Roman', Times, serif;
     height: 100px;
     width: 110px;
     border-radius: 70px;
-    
+    margin-left: 170px;
 }
 
 /* wrapper header */
